--- a/style.css
+++ b/style.css
@@ -56,3 +56,9 @@
     font-weight: bold;
 }
 /* Popup box BEGIN */
+.center {
+  margin: auto;
+  width: 60%;
+  border: 3px solid #73AD21;
+  padding: 10px;
+}
